# 1000fans

./: .gitignore  .vercelignore  Cargo.toml  README.md  audioMetadata.json  next.config.js  package.json  videoMetadata.json
.next/: build-manifest.json  react-loadable-manifest.json  trace
.next/cache/eslint/: .cache_9d8js2
.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
.next/server/pages/: _app.js  _error.js  hello-near.js  home.js  index.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: _error.js  node_modules_cbw-sdk_dist_index_js.js  node_modules_coinbase_wallet-sdk_dist_index_js.js  node_modules_isows__esm_native_js.js  node_modules_metamask_sdk_dist_browser_es_metamask-sdk_js.js  node_modules_near-wallet-selector_ethereum-wallets_node_modules_isows__esm_native_js.js  node_modules_near-wallet-selector_ethereum-wallets_node_modules_wagmi_core_dist_esm_exports_i-bfb44b.js  node_modules_safe-global_safe-apps-provider_dist_index_js.js  node_modules_safe-global_safe-apps-sdk_dist_esm_index_js.js  node_modules_walletconnect_modal-ui_dist_index_js.js  node_modules_walletconnect_modal_dist_index_js.js  node_modules_web3modal_scaffold-ui_dist_esm_exports_w3m-modal_js.js  node_modules_web3modal_siwe_dist_esm_exports_index_js.js  webpack.js
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/common/: mod.rs
contract/tests/tests/: enumeration.rs
frontend/: jsconfig.json  next.config.js  package.json
frontend/src/: config.js
frontend/src/components/: LoginModal.js  (+7 more)
public/: eventsMetadata.json
scripts/: audioMetadata.json  automation.py  chatHistory.py  featureAI.py  metadata.json  metadata.py  metadata_extractor.py  server.py  tempo_detection.py  upload.py  videoMetadata.json
src/: lib.rs
src/components/: audioPlayer.js  cards.js  footer.js  navigation.js  player.js
src/pages/: _app.js  home.js  index.js
src/styles/: app.module.css  audioPlayer.module.css  events.module.css  globals.css  music.module.css  player.module.css  videos.module.css  widget.module.css
src/wallets/: near.js
(+56 files in other folders)
